2006-06-01  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicButtonUI.java: Minor source code style 
	fixes,
	* javax/swing/plaf/basic/BasicDirectoryModel.java: Likewise,
	* javax/swing/plaf/basic/BasicFileChooserUI.java: Likewise,
	* javax/swing/plaf/basic/BasicIconFactory.java: Likewise,
	* javax/swing/plaf/basic/BasicListUI.java: Likewise,
	* javax/swing/plaf/basic/BasicOptionPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicRootPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicScrollPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicSpinnerUI.java: Likewise,
	* javax/swing/plaf/basic/BasicTabbedPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicTextAreaUI.java: Likewise.
	
2006-06-01  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComboBox.java: Minor source code formatting fixes,
	* javax/swing/JEditorPane.java: Likewise,
	* javax/swing/JFormattedTextField.java: Likewise,
	* javax/swing/JLayeredPane.java: Likewise,
	* javax/swing/JScrollPane.java: Likewise,
	* javax/swing/JSlider.java: Likewise,
	* javax/swing/JSpinner.java: Likewise,
	* javax/swing/JTree.java: Likewise,
	* javax/swing/JViewport.java: Likewise,
	* javax/swing/UIDefaults.java: Likewise,
	* javax/swing/UIManager.java: Likewise.
	
2006-06-01  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
	(BufferedImageGraphics): Cache surfaces.
	(updateBufferedImage): Copy directly for certain color models.
	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(drawImage): Reimplement.

2006-06-01  Sven de Marothy  <sven@physto.se>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoSurface.c
	(setPixels): Don't swap, correct size.

2006-05-31  Anthony Green  <green@redhat.com>

	PR 27828
	* java/net/InetSocketAddress.java: Defer getting the host
	name until somebody calls InetSocketAddress.getHostName().
	Fix "represenation" typo.

2006-06-01  Sven de Marothy  <sven@physto.se>
