@@ -1,3 +1,8 @@
+2006-06-01  Sven de Marothy  <sven@physto.se>
+
+	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
+	(updateBufferedImage): Fix some errors.
+
 2006-06-01  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* javax/swing/plaf/basic/BasicButtonUI.java: Minor source code style 
